--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "angular-2-dropdown-multiselect": "~1.8.0",
     "angular-calendar": "~0.26.1",
     "angular-confirmation-popover": "~4.2.0",
+    "angular-rating-star": "^1.0.4",
     "angular-sortablejs": "~2.6.0",
     "angular2-ladda": "~2.0.0",
     "angular2-text-mask": "~9.0.0",
